--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-data": "^4.6"
+        "openai-php/laravel": "^0.9.0",
+        "smalot/pdfparser": "^2.10",
+        "spatie/laravel-data": "^4.6",
+        "spatie/pdf-to-text": "^1.52"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -70,7 +73,7 @@
             "./vendor/bin/pint"
         ],
         "phpstan": [
-            "./vendor/bin/phpstan analyse --memory-limit=-1 --generate-baseline --allow-empty-baseline"
+            "./vendor/bin/phpstan analyse --memory-limit=-1"
         ],
         "update-ide-helpers": [
             "@php artisan ide-helper:generate",
