--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -24,7 +24,6 @@ jobs:
         id: composer-cache
         uses: actions/cache@v3
         with:
-          php-version: 8.2
           path: vendor
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
@@ -32,6 +31,8 @@ jobs:
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
+        with:
+          php-version: 8.2
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
