Updating Github Action configuration

--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
+      - name: Run Migrations
+        run: ln -f -s .env.pipelines .env && php artisan migrate
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
