Updating Github Action configuration

--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Run Migrations
         run: ln -f -s .env.pipelines .env && php artisan migrate
 
+      - name: Run Tests
+        run: composer run verify-dev
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
