--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -10,9 +10,31 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  laravel:
+    name: Laravel (PHP 8.2)
     runs-on: ubuntu-latest
+    env:
+      BROADCAST_DRIVER: log
+      CACHE_DRIVER: redis
+      QUEUE_CONNECTION: redis
+      SESSION_DRIVER: redis
+      DB_CONNECTION: pgsql
+      DB_HOST: localhost
+      DB_PASSWORD: postgres
+      DB_USERNAME: postgres
+      DB_DATABASE: postgres
+
+    # Docs: https://docs.github.com/en/actions/using-containerized-services
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+          - 5432/tcp
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
 
     steps:
       - name: Setup PHP Action
@@ -38,7 +60,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run Migrations
-        run: ln -f -s .env.pipelines .env && php artisan migrate
+        run: php artisan migrate
 
       - name: Run Tests
         run: composer run verify-dev
