--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -58,10 +58,19 @@ jobs:
             ${{ runner.os }}-php-
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Run Migrations
+      - name: Prepare the application
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+            php artisan key:generate
+
+      - name: Clear Config
+        run: php artisan config:clear
+
+      - name: Run Migration
         run: php artisan migrate
+        env:
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
 
       - name: Run Tests
         run: composer run verify-dev
