--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,5 +10,6 @@ parameters:
 
     ignoreErrors:
         - identifier: missingType.iterableValue
+        - identifier: missingType.generics
         - '#PHPDoc tag @mixin contains unknown class App\\Models\\IdeHelperUser#'
-
+        - '#PHPDoc tag @mixin contains unknown class App\\Models\\IdeHelperSummary#'
