--- a/.github/workflows/PHP.yml
+++ b/.github/workflows/PHP.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   laravel:
-    name: Laravel (PHP 8.2)
+    name: Build and Test
     runs-on: ubuntu-latest
     env:
       BROADCAST_DRIVER: log
@@ -43,7 +43,7 @@ jobs:
         with:
           php-version: '8.2'
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
