--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -69,9 +69,13 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           envs: AWS_INSTANCE_IP,ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG,SSH_KEY
           script: |
-            docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            docker stop $ECR_REPOSITORY || true
-            docker rm $ECR_REPOSITORY || true
-            docker run -d --name $ECR_REPOSITORY -p 80:8000 $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            sudo apt update
+            sudo apt install docker.io -y
+            sudo apt install awscli -y
+            sudo $(aws ecr get-login --no-include-email --region us-east-1)
+            sudo docker stop $ECR_REPOSITORY || true
+            sudo docker rm $ECR_REPOSITORY || true
+            sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            sudo docker run -d --name $ECR_REPOSITORY -p 80:8000 $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
 
