--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -144,7 +144,7 @@ jobs:
             sudo ./aws/install
             sudo aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
             sudo aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin $ECR_REGISTRY/$ECR_REPOSITORY
+            sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 339712755393.dkr.ecr.us-east-1.amazonaws.com/book_worm
             sudo docker stop $ECR_REPOSITORY || true
             sudo docker rm $ECR_REPOSITORY || true
             sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
