--- a/book_worm_test.env
+++ b/book_worm_test.env
@@ -12,11 +12,11 @@ API_PER_MINUTE=600
 AUTH_PER_MINUTE=600
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=book-worm-db-1.cxqcg2mg8rfr.us-east-1.rds.amazonaws.com
 DB_PORT=5432
-DB_DATABASE=bookworm
-DB_USERNAME=bookworm
-DB_PASSWORD=test123
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=book-worm-db-1.cxqcg2mg8rfr.us-east-1.rds.amazonaws.com
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
