--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -152,6 +152,7 @@ jobs:
             sudo aws configure set region us-east-1
             sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin $ECR_REGISTRY/$ECR_REPOSITORY
             aws s3 cp s3://book-worm-test/envs/.env .env
+            sudo docker system prune --all --force
             sudo docker stop $ECR_REPOSITORY || true
             sudo docker rm $ECR_REPOSITORY || true
             sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
