--- a/book_worm_test.env
+++ b/book_worm_test.env
@@ -16,7 +16,7 @@ DB_HOST=book-worm-db-1.cxqcg2mg8rfr.us-east-1.rds.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=book-worm-db-1.cxqcg2mg8rfr.us-east-1.rds.amazonaws.com
+DB_PASSWORD=NewPass2308
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
